Added bus count

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="map-overlay top">
         <h2>Current Bus Locations in Boston</h2>
         <p>Refresh the page to update locations</p>
+        <p id="latest_data">Loading Bus Data...</p>
     </div>
     <script src="./mapanimation.js"></script>
 </body>
