Changed some text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="map"></div>
     <div class="map-overlay top">
-        <h2>Current Bus Locations in Boston</h2>
+        <h2>Current <strong>MBTA</strong> bus locations</h2>
         <p>Refresh the page to update locations</p>
         <p id="latest_data">Loading Bus Data...</p>
     </div>
