--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div id="map"></div>
     <div class="map-overlay top">
-        <h2>Current <strong>MBTA</strong> bus locations</h2>
-        <p>Refresh the page to update locations</p>
-        <p id="latest_data">Loading Bus Data...</p>
+        <h2>CURRENT <strong>MBTA</strong> BUS LOCATIONS</h2>
+        <p>REFRESH THIS PAGE TO GET LATEST DATA</p>
+        <p id="latest_data" class="latest-data">loading Bus Data...</p>
     </div>
     <script src="./mapanimation.js"></script>
 </body>
