--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="map"></div>
     <div class="map-overlay top">
         <h2>CURRENT <strong>MBTA</strong> BUS LOCATIONS</h2>
+        <small>DATA WILL UPDATE EVERY 20 SECONDS</small>
         <p id="latest_data" class="latest-data">loading Bus Data...</p>
     </div>
     <script src="./mapanimation.js"></script>
