--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             background-image: linear-gradient(to left, #aae08fdf, #75cff0df);
             padding: 10px;
             color: rgb(70, 70, 70);
-            text-shadow: 0px 0px 3px #fee082;
+            text-shadow: 0px 0px 2px #fee08299;
             text-align: center;
           }
           .title {
