Final for today

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
         <div class="map-stats">
             <p id="latest_data" class="latest-data">LOADING BUS DATA...</p>
-            <p class="update-data">DATA WILL UPDATE EVERY 20 SECONDS</p>
+            <p class="update-data" id="updateSpeed"></p>
         </div>
     </div>
     <script src="./mapanimation.js"></script>
