Fixed code style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
     <link href="./styles.css" rel="stylesheet" />
-    <title>Current Locations in Boston</title>
+    <title>Current MBTA Bus Locations</title>
 </head>
 <body>
     <div id="map"></div>
