--- a/index.html
+++ b/index.html
@@ -6,20 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
-    <link href="./styles.css" rel="stylesheet" />
+    <!-- <link href="./styles.css" rel="stylesheet" /> -->
     <title>Current MBTA Bus Locations</title>
+    <style>
+body,h2,p, div, h2, h3  {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background: red;
+    width: 100%;
+    height: 100%;
+    font-size: 0.8em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 0;
+  }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: absolute;
+    padding: 10px;
+    border-radius: 5px;
+    left: 20px;
+    top: 20px;
+    background: #f6f6f6fa;
+    color: #373767;
+    box-shadow: 0 0 10px 1px rgb(41, 41, 41, 0.5);
+    letter-spacing: 1px;
+}
+h2 {
+    margin: 3px 0 3px 0;
+    font-size: 2em;
+}
+h3 {
+    margin: 3px 0 3px 0;
+    font-size: 1em;
+}
+
+p {
+    margin: 5px 10px 5px 10px;
+    font-size: 0.9em;
+}
+.footer {
+    position:absolute;
+    letter-spacing: 2px;
+    font-size: 0.9em;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 5px 0 0 0;
+    background-color: #373767fa;
+    color: #acacac;
+    box-shadow: 0 0 10px 2px #373767aa;
+}
+.footer p {
+    margin: 0 10px 3px 10px;
+}
+.update-time {
+    color: rgb(26, 99, 32);
+    font-weight: 100;
+}
+
+    </style>
+
 </head>
 <body>
     <div id="map"></div>
-    <div class="container top">
-        <div class="map-overlay">
-            <h2 class="title">CURRENT <strong>MBTA</strong> BUS LOCATIONS</h2>
-        </div>
-    
-        <div class="map-stats">
-            <p id="latest_data" class="latest-data">LOADING BUS DATA...</p>
-            <p class="update-data" id="updateSpeed"></p>
-        </div>
+    <div class="container">
+        <h2>MBTA BUSES</h2>
+        <h3>Locations as of: <span id="updateSpeed" class="update-time">[LOADING]</span></h3>
+    </div>
+    <div class="footer">
+        <p id="latest_data">LOADING BUS DATA</p>
+        <p>DATA UPDATES EVERY 20 SECONDS</p>
     </div>
     <script src="./mapanimation.js"></script>
 </body>
