--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body,h2,p, div, h2, h3  {
     padding: 0;
 }
 body {
-    background: red;
+    background: #000030;
     width: 100%;
     height: 100%;
     font-size: 0.8em;
